bug: visibility: hidden

--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ td.expense {
 
 .modal-overlay.active{
     opacity: 1;
-    visibility: visible;
+    visibility: hidden;
 
 } 
 .modal{
